[gd_scene load_steps=5 format=3 uid="uid://h1h7vuaj106o"]

[ext_resource type="Script" path="res://SceneHandler.gd" id="1_r1ay5"]
[ext_resource type="PackedScene" uid="uid://u2l3s6gviwvy" path="res://Maps/map1.tscn" id="2_ul8ha"]
[ext_resource type="PackedScene" uid="uid://e24hucxkns67" path="res://player.tscn" id="3_eo8xl"]
[ext_resource type="FontFile" uid="uid://bwpfr3ia56oac" path="res://fonts/Xolonium-Regular.ttf" id="4_s1sfo"]

[node name="SceneHandler" type="Node"]
script = ExtResource("1_r1ay5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 1.074
anchor_bottom = 1.0
offset_top = -1026.0
offset_right = 7069.75
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 1, 0.384314, 1)

[node name="Map1" parent="." instance=ExtResource("2_ul8ha")]

[node name="Player" parent="." instance=ExtResource("3_eo8xl")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(108, 499)

[node name="Checkpoint1" type="Marker2D" parent="."]
position = Vector2(4826, 4805)

[node name="Checkpoint2" type="Marker2D" parent="."]
position = Vector2(-2574, -3623)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -7065.0
offset_top = -664.0
offset_right = -5915.0
offset_bottom = -14.0

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -588.0
offset_top = -342.0
offset_right = 594.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.945098, 0.843137, 1)

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -145.0
offset_right = 104.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_s1sfo")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_s1sfo")
theme_override_font_sizes/font_size = 60
text = "Triangle robot
Adventures"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuCamera" type="Camera2D" parent="MainMenu"]
position = Vector2(578, 324)

[node name="Checkpoint3" type="Marker2D" parent="."]
position = Vector2(-1231, 3099)

[node name="Checkpoint4" type="Marker2D" parent="."]
position = Vector2(3066, -4455)

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_play_button_pressed"]
